# twitter_venturebot

./: Access.csv  Ecobank.csv  FCMB.csv  Fidelity.csv  GTB.csv  HarlemCapital.csv  Kudabank.csv  Wema.csv  Zenith.csv  blackfounders.csv  blacktech.csv  chase.csv  loopcap.csv  main.py  morgan.csv  pyproject.toml  score3.csv
