[tool.poetry]
name = "twitterventurebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
twitterscraper = "^1.4.0"
pandas = "^1.0.5"
getoldtweets3 = "^0.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
